--- a/html/faci_info.html
+++ b/html/faci_info.html
@@ -4,72 +4,125 @@
 <head>
   <title>IIUM SPORT RESERVATION CENTRE</title>
   <link rel="stylesheet" href="../CSS_JS/faciinfo.css">
+  <style>
+    body {
+      background-color: #f1f1f1;
+      color: #1b9284;
+      font-family: Arial, sans-serif;
+    }
 
+    .main {
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    .pill-nav {
+      background-color: #f1f1f1;
+      overflow: hidden;
+    }
+
+    .pill-nav a {
+      color: #1b9284;
+      float: left;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+
+    .pill-nav a.active {
+      background-color: #1b9284;
+      color: white;
+    }
+
+    .pill-nav a:hover {
+      background-color: #ddd;
+      color: #1b9284;
+    }
+
+    h1, h2, h3, p {
+      color: #1b9284;
+    }
+
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 0 4px;
+    }
+
+    .column {
+      flex: 25%;
+      max-width: 25%;
+      padding: 0 4px;
+    }
+
+    .column .content {
+      background-color: white;
+      margin-bottom: 15px;
+      padding: 15px;
+      text-align: center;
+    }
+  </style>
 </head>
 
-<!-- MAIN (Center website) -->
-<div class="main">
-  <div class="pill-nav">
-    <a style="color: #1b9284;" href="Main_Page.html">Home</a>
-    <a style="color: #1b9284;" href="loginGP.html">Login</a>
-    <a style="color: #1b9284;" href="menuGP.html">Menu</a>
-    <!-- <a style="color: #1b9284;" href="procedure.html">Procedure</a> -->
-    <a style="color: #1b9284;" href="faci_info.html">Facilities</a>
-    <!-- <a style="color: #1b9284;" href="contact.html" class="active">Contact Us</a> -->
+<body>
+  <div class="main">
+    <div class="pill-nav">
+      <a style="color: #1b9284;" href="Main_Page.html">Home</a>
+      <a style="color: #1b9284;" href="loginGP.html">Login</a>
+      <a style="color: #1b9284;" href="menuGP.html">Menu</a>
+     
+      <a style="color: white;" href="faci_info.html" class="active">Facilities</a>
+   
+    </div>
+    <h1>IIUM SPORT CENTRE</h1>
+    <hr>
+
+    <h2>FACILITIES INFORMATION</h2>
+
+    <!-- Portfolio Gallery Grid -->
+    <div class="row">
+      <div class="column">
+        <div class="content">
+          <img src="../asset/badminton.jpg" alt="badminton" style="width:100%">
+          <h3>BADMINTON</h3>
+          <p>Operation Hours: 8am - 10pm</p>
+          <p>Must be fully vaccinated.</p>
+          <p>Located @ FSC & MSC</p>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="content">
+          <img src="../asset/tennis.jpg" alt="tennis" style="width:100%">
+          <h3>TENNIS COURT</h3>
+          <p>Operation Hours: 8am - 10pm</p>
+          <p>Must be fully vaccinated.</p>
+          <p>Located @ FSC & MSC</p>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="content">
+          <img src="../asset/futsal court.jfif" alt="futsal" style="width:100%">
+          <h3>FUTSAL</h3>
+          <p>Operation Hours: 8am - 10pm</p>
+          <p>Must be fully vaccinated.</p>
+          <p>Located @ FSC & MSC</p>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="content">
+          <img src="../asset/swimming pool.jfif" alt="swimming pool" style="width:100%">
+          <h3>Swimming Pool</h3>
+          <p>Operation Hours: 8am - 10pm</p>
+          <p>Must be fully vaccinated.</p>
+          <p>Located @ FSC & MSC</p>
+        </div>
+      </div>
+    </div>
   </div>
-  <h1>IIUM SPORT CENTRE</h1>
-  <hr>
-
-  <h2>FACILITIES INFORMATION</h2>
-
-
-  <!-- Portfolio Gallery Grid -->
-  <div class="row">
-    <div class="column">
-      <div class="content">
-        <img src="../asset/badminton.jpg" alt="badminton" style="width:100%">
-        <h3 style="color: #1b9284;">BADMINTON</h3>
-        <p style="color: #1b9284;">Operation Hours :8am - 10 pm</p>
-        <p style="color: #1b9284;">Must be fully vaccinated.</p>
-        <p style="color: #1b9284;">Located @ FSC & MSC </p>
-
-      </div>
-    </div>
-
-    <div class="column">
-      <div class="content">
-        <img src="../asset/tennis.jpg" alt="tennis" style="width:100%">
-        <h3 style="color: #1b9284;">TENNIS COURT</h3>
-        <p style="color: #1b9284;">Operation Hours :8am - 10 pm</p>
-        <p style="color: #1b9284;">Must be fully vaccinated.</p>
-        <p style="color: #1b9284;">Located @ FSC & MSC </p>
-      </div>
-    </div>
-
-    <div class="column">
-      <div class="content">
-        <img src="../asset/futsal court.jfif" alt="futsal " style="width:100%">
-        <h3 style="color: #1b9284;">FUTSAL</h3>
-        <p style="color: #1b9284;">Operation Hours :8am - 10 pm</p>
-        <p style="color: #1b9284;">Must be fully vaccinated.</p>
-        <p style="color: #1b9284;">Located @ FSC & MSC </p>
-      </div>
-    </div>
-
-    <div class="column">
-      <div class="content">
-        <img src="../asset/swimming pool.jfif" alt="swimming pool " style="width:100%">
-        <h3 style="color: #1b9284;">Swimming Pool</h3>
-        <p style="color: #1b9284;">Operation Hours :8am - 10 pm</p>
-        <p style="color: #1b9284;">Must be fully vaccinated.</p>
-        <p style="color: #1b9284;">Located @ FSC & MSC </p>
-      </div>
-    </div>
-
-
-    <!-- END MAIN -->
-  </div>
-
-  </body>
+</body>
 
 </html>
