--- a/html/confirm.html
+++ b/html/confirm.html
@@ -3,11 +3,19 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Comfrim Booking</title>
+    <title>Confirm Booking</title>
     <link rel="stylesheet" href="../CSS_JS/loginGP.css">
 
-
     <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
+
         .pill-nav a {
             display: inline-block;
             color: white;
@@ -43,43 +51,90 @@
             border-radius: 25px;
             font-weight: bold;
         }
+
+        .box {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .inner-box {
+            width: 400px;
+            padding: 20px;
+            border: 1px solid black;
+            border-radius: 10px;
+        }
     </style>
 </head>
 
 <body>
     <div class="pill-nav">
-
         <a href="Main_Page.html">Home</a>
         <a href="loginGP.html">Login</a>
         <a href="menuGP.html">Menu</a>
         <a href="procedure.html">Procedure</a>
         <a href="faci_info.html">Facilities</a>
-        <a href="contact.html">Contact Us</a>
     </div>
 
     <div class="box">
         <div class="inner-box">
-            <form action="afterregisterGP.html" method="post">
+            <label for="bookingType">Booking Type:</label>
+            <select id="bookingType" disabled>
+                <option value="badminton">Badminton</option>
+                <option value="tennis">Tennis</option>
+                <option value="futsal">Futsal</option>
+                <option value="swimming">Swimming</option>
+            </select>
+            <br><br>
 
-                <h1>Your Booking Have Been Comfirm</h1>
-                <h2>Sport Type : <h2 id="sport"></h2>
-                </h2>
-                <br />
-                <h3 style="text-align: center;"> Thank You</h3>
-                <br />
-                <a class="button" href="Main_Page.html"> Home</a>
+            <label for="fullName">Full Name:</label>
+            <input type="text" id="fullName" required>
+            <br><br>
 
-            </form>
+            <label for="matricID">Matric ID:</label>
+            <input type="text" id="matricID" required>
+            <br><br>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" required>
+            <br><br>
+
+            <label for="timeSlot">Time Slot:</label>
+            <select id="timeSlot" required>
+                <option value="" selected disabled>Select a time slot</option>
+                <option value="8-10">8 a.m - 10 a.m</option>
+                <option value="10:30-12:30">10:30 a.m - 12:30 p.m</option>
+                <option value="14-16">2:00 p.m - 4:00 p.m</option>
+                <option value="16:30-18:30">4:30 p.m - 6:30 p.m</option>
+            </select>
+            <br><br>
+
+            <label for="contactNumber">Contact Number:</label>
+            <input type="tel" id="contactNumber" required>
+            <br><br>
+
+            <label for="participants">Number of Participants:</label>
+            <input type="number" id="participants" required>
+            <br><br>
+
+            <input type="submit" value="Confirm Booking">
         </div>
     </div>
+
+    <script>
+        const queryString = window.location.search;
+        const urlParams = new URLSearchParams(queryString);
+        const sport = urlParams.get('sport');
+        const bookingTypeSelect = document.getElementById("bookingType");
+
+        if (sport === "futsal") {
+            bookingTypeSelect.selectedIndex = 2;
+        } else if (sport === "swimming") {
+            bookingTypeSelect.selectedIndex = 3;
+        } else {
+            bookingTypeSelect.selectedIndex = 0;
+        }
+    </script>
 </body>
 
 </html>
-
-
-<script>
-    const queryString = window.location.search;
-    const urlParams = new URLSearchParams(queryString);
-    const sport = urlParams.get('sport');
-    document.getElementById("sport").innerHTML = sport.toUpperCase();
-</script>
